Numerus bug fixes and improved editor for boardgame. Fixed CKEditor readonly when created in invisible field.

--- a/css/questionset.css
+++ b/css/questionset.css
@@ -54,7 +54,7 @@
 }
 
 .questionset-results .greeting {
-  margin-top: 180px;
+  margin: 1em;
 }
 
 .questionset-results .score {
